--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "mssql": "^6.3.1",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.29.1",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
