--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "mssql": "^6.3.1",
     "nodemon": "^2.0.6",
-    "jwt-simple": "^0.5.6",
-    "moment": "^2.29.1",
+    "oracledb": "^5.1.0",
     "validator": "^13.5.2"
   },
   "devDependencies": {
