packages and app changes

--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "handlebars": "^4.7.7",
+    "https": "^1.0.0",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "mssql": "^6.3.1",
+    "node-cron": "^3.0.0",
     "nodemailer": "^6.5.0",
     "nodemon": "^2.0.6",
     "oracledb": "^5.1.0",
-    "axios": "^0.21.1",
-    "node-cron": "^3.0.0",
     "validator": "^13.5.2"
   },
   "devDependencies": {
