--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "handlebars": "^4.7.7",
+    "http": "0.0.1-security",
     "https": "^1.0.0",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
