--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mssql": "^6.3.1",
     "node-cron": "^3.0.0",
     "nodemailer": "^6.5.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^2.0.6",
     "oracledb": "^5.1.0",
     "validator": "^13.5.2"
